@@ -1,10 +1,13 @@
 package com.IMJM.salon.service;
 
+import com.IMJM.common.PageResponseDto;
 import com.IMJM.common.entity.Review;
 import com.IMJM.salon.dto.ReviewDto;
 import com.IMJM.salon.repository.ReviewRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -17,10 +20,11 @@ public class ReviewService {
 
     private final ReviewRepository reviewRepository;
 
-    public List<ReviewDto> getSalonReviews(String salonId) {
-        List<Review> reviews = reviewRepository.findBySalonId(salonId);
-        return reviews.stream()
+    public PageResponseDto<ReviewDto> getSalonReviews(String salonId, Pageable pageable) {
+        Page<Review> reviewPage = reviewRepository.findBySalonId(salonId, pageable);
+        List<ReviewDto> reviewDtos =  reviewPage.getContent().stream()
                 .map(ReviewDto::new)
-                .collect(Collectors.toList());
+                .toList();
+        return new PageResponseDto<>(reviewDtos, reviewPage);
     }
 }
